tests/baselines/reference/library_RegExpExecArraySlice.errors.txt
library_RegExpExecArraySlice.ts(3,1): error TS2454: Variable 'regExpExecArrayValue' is used before being assigned.
library_RegExpExecArraySlice.ts(4,1): error TS2454: Variable 'regExpExecArrayValue' is used before being assigned.
library_RegExpExecArraySlice.ts(5,1): error TS2454: Variable 'regExpExecArrayValue' is used before being assigned.


==== library_RegExpExecArraySlice.ts (3 errors) ====
    // RegExpExecArray.slice can have zero, one, or two arguments
    var regExpExecArrayValue: RegExpExecArray;
    regExpExecArrayValue.slice();
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2454: Variable 'regExpExecArrayValue' is used before being assigned.
    regExpExecArrayValue.slice(0);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2454: Variable 'regExpExecArrayValue' is used before being assigned.
    regExpExecArrayValue.slice(0,1);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2454: Variable 'regExpExecArrayValue' is used before being assigned.